--- a/test/src/app.css
+++ b/test/src/app.css
@@ -1,10 +1,36 @@
 body {
   background-color: black;
 }
+
 button {
   outline: none;
   border: 0;
   cursor: pointer;
+}
+
+.navbar {
+  font-size: 2rem;
+  color: black;
+  padding: 0.5em;
+  background-color: blanchedalmond;
+}
+
+.navbar-logo {
+  color: green;
+  margin-right: 0.5rem;
+}
+
+.navbar-count {
+  display: inline-block;
+  text-align: center;
+  width: 2.5rem;
+  height: 2.5rem;
+  line-height: 2.5rem;
+  font-size: 2rem;
+  background-color: green;
+  border-radius: 50%;
+  color: white;
+  margin-left: 0.5rem;
 }
 
 .habit {
