--- a/test/src/app.css
+++ b/test/src/app.css
@@ -93,3 +93,11 @@ button {
   font-size: 2rem;
   color: darkred;
 }
+
+.habits-reset {
+  font-size: 1.5rem;
+  background-color: green;
+  padding: 0.3em 0.5em;
+  margin: 0.2rem;
+  color: white;
+}
