Add selectedVideo when selecting one of video

--- a/mattube/src/components/video_item/video_item.module.css
+++ b/mattube/src/components/video_item/video_item.module.css
@@ -1,8 +1,15 @@
 .container {
   margin-top: 0.2rem;
   padding: 0;
-  width: 50%;
   list-style: none;
+}
+
+.container.grid {
+  width: 50%;
+}
+
+.container.list {
+  width: 100%;
 }
 
 .video {
